--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
   <!-- Contact -->
   <section id="contact" class="container">
     <h1 class="sub-title">Contact</h1>
-    <p><i class="fa fa-envelope"></i> ramyavalicherla@gmail.com</p>
-    <p><i class="fa fa-phone"></i> 9133622152</p>
-    <p><i class="fa fa-map-marker"></i> Challagirigala, Andhra Pradesh</p>
+    <p><i class="fa fa-envelope"></i> ramyavalicherla@gmail.com</p><br>
+    <p><i class="fa fa-phone"></i> 9133622152</p><br>
+    <p><i class="fa fa-map-marker"></i> Challagirigala, Andhra Pradesh</p><br>
 
     <div class="social-icons">
       <a href="https://github.com/Ramyasree-17" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -138,4 +138,5 @@
   </footer>
 
 </body>
+
 </html>
