--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <a href="Ramyapy.pdf" target="_blank" class="btn btn2">
         <i class="fa-solid fa-eye"></i> View Resume
       </a>
-      <a href="Ramyapy.pdf" download class="btn btn2">
+      <a href="Ramya_Resume.pdf" download class="btn btn2">
         <i class="fa-solid fa-file-pdf"></i> Download Resume
       </a>
     </div>
@@ -140,4 +140,5 @@
 </body>
 
 </html>
+
 
